--- a/Web02_Servlet/WebContent/index.html
+++ b/Web02_Servlet/WebContent/index.html
@@ -3,78 +3,90 @@
 <head>
 <meta charset="UTF-8">
 <title>index.html</title>
-<link rel="stylesheet" href="/Web02_Servlet/css/bootstrap.css" />
+<link rel="stylesheet" href="/Web02_Servlet/css/bootstrap.css"/>
 </head>
 <body>
 	<div class="container">
 		<h1>인덱스 페이지 입니다.</h1>
 		<ul>
-			<li><a href="hello">hello~</a></li>
+			<li><a href="hello">hello</a></li>
 			<li><a href="ready">ready?</a></li>
-			<li><a href="time">현재시간 보기</a></li>
-			<li><a href="time.jsp">현재시간 보기(jsp)</a></li>
+			<li><a href="time">현재 시간 보기</a></li>
+			<li><a href="time.jsp">현재 시간 보기(jsp)</a></li>
 			<li><a href="sub/fortune">오늘의 운세 보기</a></li>
 			<li><a href="sub/fortune.jsp">오늘의 운세 보기(jsp)</a></li>
-			<li><a href="todo/list">할일 목록 보기</a></li>
-			<li><a href="todo/list.jsp">할일 목록 보기(jsp)</a></li>
-			<li><a href="member/list">회원 목록 보기</a></li>
+			<li><a href="todo/list">할 일 목록 보기</a></li>
+			<li><a href="todo/list.jsp">할 일 목록 보기(jsp)</a></li>
+			<li><a href="member/list">회원 목록 보기</a></li><!-- get방식의 요청 -->
 			<li><a href="member/list.jsp">회원 목록 보기(jsp)</a></li>
-			<li><a href="users/signup_form.jsp">회원가입 하러 가기</a></li>
+			<li><a href="users/signup_form.jsp">회원가입하러가기</a></li>
 		</ul>
-		<form action="/Web02_Servlet/send" method="post">
-			<label for="msg">서버에 할말 입력</label>
-			<input type="text" name="msg" id="msg"/>
-			<button class="btn btn-primary" type="submit">전송</button>
-		</form>
+		
 		<!-- 
-			아래의 폼 전송 요청을 처리할 UsersLoginServlet 클래스를 만들어서
-			요청 처리를 해 보세요.
+		action에 적은 내용으로 링크가 나옴
+		데이터를 서버로 보내는 방식
+		method는 form에 적은 내용을 서버에 보내기 위해 필요한 메소드
+		 post방식으로 서버에 리퀘스트가 들어온다.
+		 form 제출도 요청
+		 form은 특별한 이유가 없다면 post방식으로 전송하는게 일반적이다.
+		 요청과 함꼐 클라이언트가 입력한 데이터도 같이 보내진다.
+		 요청과 함꼐 서버에 문자열을 보내고자 할 때 사용한다.
+		 서버에서 어떤 입력칸에서 입력을했는지 구분 할 때 : name 이 중요하다.
+		-->
+		<form action ="/Web02_Servlet/send" method="post"><!-- action은 요청과 함께 데이터를 보내는 방식  post방식으로 출력-->
+			<label for="msg">서버에 할 말 입력</label>
+			<input type="text" name="msg" id="msg"/>
+			<button class="btn btn-success" type="submit">전송</button>
+		</form><!-- 폼 안에 있는 버튼을 눌렀을 때 -->
+		<br/>
+	
+		
+		
+		<!-- 
+			아래의 폼 전송 요청을 처리 할 UsersLoginServlet 클래스를 만들어서
+			요청을 처리해 보세요
 			
 			아이디 : gura
-			비밀번호 : 1234 
-			
-			를 입력했으면 
-			
-			gura 님  로그인 되었습니다. 를 클라이언트에게 응답하고
-			
-			하나라도 다르면 
-			
-			아이디 혹은 비밀번호가 틀려요. 를 클라이언트에게 응답하게 해 보세요. 
+			비밀번호 : 1234
+			를 입력했으면
+			gura님이 로그인 되었습니다. 를 클라이언트에게 응답하고
+			하나라도 다르면
+			아이디 혹은 비밀번호가 틀렸습니다. 를 클라이언트에게 응답하게 하기
+		
 		 -->
-		<h3>가상의 로그인 폼 입니다.</h3>
-		<form action="/Web02_Servlet/users/login" method="post">
-			<div class="form-group">
-				<label for="id">아이디</label>
-				<input class="form-control" type="text" name="id" id="id"/>
-			</div>
-			<div class="form-group">
-				<label for="pwd">비밀번호</label>
-				<input class="form-control" type="text" name="pwd" id="pwd"/>
-			</div>
-			<button class="btn btn-primary" type="submit">로그인</button>
-			<button class="btn btn-warning" type="reset">취소</button>
-		</form>
+		
 		
 		<h3>가상의 로그인 폼 입니다.</h3>
-		<form action="/Web02_Servlet/users/login.jsp" method="post">
-			<div class="form-group">
-				<label for="id">아이디</label>
-				<input class="form-control" type="text" name="id" id="id"/>
-			</div>
-			<div class="form-group">
-				<label for="pwd">비밀번호</label>
-				<input class="form-control" type="text" name="pwd" id="pwd"/>
-			</div>
-			<button class="btn btn-primary" type="submit">로그인</button>
+		<form action ="/Web02_Servlet/user/login" method="post">
+		<div class="form-group">
+		<label for="id">아이디</label>
+			<input class="form-control" type="text" name="id" id="id"/>
+		</div>
+		<div class="form-group">
+		<label for="pwd">비밀번호</label>
+			<input class="form-control" type="text" name="pwd" id="pwd"/>
+		</div>
+			<button class="btn btn-success" type="submit">로그인</button>
 			<button class="btn btn-warning" type="reset">취소</button>
-		</form>
+		
+		</form><!-- 폼 안에 있는 버튼을 눌렀을 때 -->
+		
+		
+		
+		<h3>가상의 로그인 폼 입니다.</h3>
+		<form action ="/Web02_Servlet/users/login.jsp" method="post">
+		<div class="form-group">
+		<label for="id">아이디</label>
+			<input class="form-control" type="text" name="id" id="id"/>
+		</div>
+		<div class="form-group">
+		<label for="pwd">비밀번호</label>
+			<input class="form-control" type="text" name="pwd" id="pwd"/>
+		</div>
+			<button class="btn btn-success" type="submit">로그인</button>
+			<button class="btn btn-warning" type="reset">취소</button>
+		
+		</form><!-- 폼 안에 있는 버튼을 눌렀을 때 -->
 	</div>
 </body>
 </html>
-
-
-
-
-
-
-
